# sdcloud_applications

./: .gitignore  CMakeLists.txt  kconfigs.in  kconfigs_projbuild.in  partitions.csv
main/: CMakeLists.txt  compression.c  compression.h  global.h  heartbeat.c  heartbeat.h  sdcloud_final.c  spiffs.c  spiffs.h
testing_config/: config.txt
